<resources>
    <string name="app_name">Fierce Tag</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="title_activity_main_user_screen">MainUserScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="you_have_not_selected_any_game_s">You have not selected any game(s)</string>
    <string name="favorite_games">Favorite Games</string>
    <string name="no_description">No Description</string>
    <string name="your_username">Your_Username</string>
    <string name="todo">TODO</string>


</resources>
